# accessible_media_player

./: .gitignore  BUILDING.md  DOCUMENTATION_UPDATE.md  ERROR_HANDLING_IMPROVEMENTS.md  FILE_ASSOCIATIONS.md  FIX_PROXIES_ERROR.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOADINGDIALOG_FIX.md  LOGGING.md  QUICK_START.md  USER_GUIDE.md  UV_QUICK_FIX.md  YOUTUBE_SEARCH_FIX.md  accessible_media_player.spec  build.py  diagnose_youtube_search.py  installer.iss  monitor_logs.py  pyproject.toml  readme.md  requirements.txt  test_file_associations.py  update_info.json
.VSCodeCounter/2025-11-08_06-59-51/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
source/: __version__.py  accessible_media_player.py  accessible_youtube_downloader_pro.py  application.py  database.py  doc_handler.py  logger_config.py  paths.py  settings_handler.py  utiles.py
source/assets/: version_info.txt
source/docs/ar/: guide.txt
source/docs/en/: guide.txt
source/download_handler/: downloader.py
source/gui/: activity_dialog.py  download_progress.py  settings_dialog.py  text_viewer.py
source/languages/en/lc_messages/: accessible_youtube_downloader.mo  accessible_youtube_downloader.po
source/languages/fr/lc_messages/: accessible_youtube_downloader.mo
source/languages/it/lc_messages/: accessible_youtube_downloader.mo
source/languages/tr/lc_messages/: accessible_youtube_downloader.mo
source/media_player/: player.py
source/youtube_browser/: browser.py  search_handler.py
