[project]
name = "accessible-youtube-downloader-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "pafy>=0.5.5",
    "pyperclip>=1.11.0",
    "python-vlc>=3.0.21203",
    "requests>=2.32.5",
    "wxpython>=4.2.4",
    "youtube-search-python>=1.6.6",
    "httpx<0.28",  # Required: httpx 0.28+ removed proxies parameter
    "yt-dlp>=2025.10.22",
]
